# axiom-engine

./: .claudeignore  .coverage  .cursorignore  .cursorindexingignore  .dockerignore  .env.example  .gitignore  CACHE_FIX_SUMMARY.md  DockerFile  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_FIXES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOGGING_COMPLETE.md  LOGGING_IMPLEMENTATION.md  LOGGING_QUICK_START.md  LOGGING_REFACTOR.md  README.md  REFACTORING_PROGRESS.md  app.py  client.js  debug.html  debug.html.bak  design-final.html  design-playground.html  design-visuals.html  design.html  docker-compose.yml  fix_directions.py  index.html  neural-bg.js  pyproject.toml  python123.js  requirements.txt  skip  test_bug_fixes.py  test_dashboard.py  test_diagnostics.py  test_graph_render.html  verify_cache_fix.py  (+1 more)
.github/workflows/: ci.yml
core/: __init__.py  cache.py  config.py  decorators.py  interactivity.py  prompts.py  repair_tester.py  session.py  utils.py
core/.axiom_test_cache/: axiom.db  axiom.db-shm  (+6 more)
css/: base.css  components.css  graphs.css  layout.css  messages.css  simulation.css  style.css
faiss_index/: index.pkl
js/: api.js  client.js  config.js  controllers.js  difficulty.js  interactions.js  main.js  neural-bg.js  renderer.js  repair.js  sanitizer.js  ui.js
routes/: __init__.py  chat.py  debug.py  feedback.py  health.py  node_inspect.py  repair.py  session_routes.py  upload.py
static/: debug-dashboard.html  design-visuals.html  index.html
testing/: check_models.py  debug.html  inspect_db.py  test_vectors.py
tests/: conftest.py
vscode/: settings.json
(+42 files in other folders)
