[project]
name = "axiom-engine"
version = "1.3.0"
description = "AI-powered algorithm visualization engine with RAG document intelligence"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["core", "routes", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function call in default arg — used in decorators
    "SIM108", # ternary — readability preference
    "SIM117", # nested with — readability preference
    "SIM105", # contextlib.suppress — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["core", "routes"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
